--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,13 +139,37 @@ h1,h2,h3,h4{{margin: o;
 
 
 /*----------------------------------------------------footer*/
-.footer {
+footer {
     background-color: #215627
     color: #0ee7cab0;
     min-height: 120px;
-    margin: 0;
+    margin: 0;}
 }/*-----------------------------------------video*/
-.video
+.video, .images,
+      div {
+        width:  100px;
+        height: 100px;
+        margin: 10px;
+      
+        left: 300px;
+        top: 200px;
+        right: 300px;
+        bottom:  100px;
+      }
+      .one {
+        
+        background-color: rgb(122, 77, 77);
+      }      
+
+      .two {
+        background-color: #919c6d;
+      }      
+
+      .three {
+        background-color:  rgb(111, 245, 245);
+      }    
+
+    </style>
 
 /*-------------------------------------------------------social*/
 .social-links {
