--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,17 @@
  /*----------------------------------------------------jumbottron*/
 
 
+/*----------------------------------------------------foot*/
+.tooltip-test{
+    padding-bottom: 12px;
+    padding-top: 12px;
+    margin: 10%;
+    position: left;
+
+}
+ 
+
+
 
 
 /*----------------------------------------------------header*/
