--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Yrsa&display=swap|100,200,300,400,500,600,700');
 
+/*-----------------------------------------------------------------custom*/
+
+
+
+
+
+
+
 /*-----------------------------------------------------------------media*/
+#video-container{
+    height: 100vh;
+    padding 0px;
 
-@media (min-width: 768px) and (max-width: 1199.98px) { 
+}
+#main-video{
+     height: 100vh;
+     padding: 0px;
+}
 
- }
+.jumbotron{
+    display: auto !important ;
+    backface-visibility: hidden;
+    ruby-position: auto;
+    padding: 0px !important;
+}
+
+
+
 /*----------------------------------------------------------colors*/
 
 
@@ -242,26 +265,26 @@ footer {
     padding-bottom: 15px !important;
 }
 .social-links li a i {
-    width: 32px;
-    height: 32px;
-    padding: 12px 0;
-    border-radius: 50%;
-    font-size: 13px;
-    line-height: 7px;
-    text-align: center;
-    color: #774545;
-    background: #b4aeae;
-    transition: all 0.35s ease-in-out; 
-    -moz-transition: all 0.35s ease-in-out; 
-    -webkit-transition: all 0.35s ease-in-out; 
-    -o-transition: all 0.35s ease-in-out; 
+    width: 32px !important;
+    height: 32px !important;
+    padding: 12px 0 !important;
+    border-radius: 50% !important;
+    font-size: 13px !important;
+    line-height: 7px !important;
+    text-align: center !important;
+    color: #774545 !important;
+    background: #b4aeae !important;
+    transition: all 0.35s ease-in-out !important;
+    -moz-transition: all 0.35s ease-in-out !important;
+    -webkit-transition: all 0.35s ease-in-out !important;
+    -o-transition: all 0.35s ease-in-out !important;
 }
 .social-links li a i:hover{
-    background: #e84610;
+    background: #e84610 !important;
 }
 #footer-details {
-    padding: 20px;
+    padding: 20px 1 !important;
 }
 .footer-details{
-    padding: 20px;
+    padding: 20px !important;
 }
