add image background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,11 +21,12 @@ text-align: wrap;
 font-weight: 400;
 }
 #bgimg1{
-    background-image: url("../images/1070.png");
+    background-image: url("../images/001453.jpg");
     image-resolution: 20%;
 }
 #bgimg{
-    background-image: url("../images/1453.png");
+    background-image: url("../images/1453.jpg");
+    
 }
 
 /*-------------------------------------------------*/
