--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,13 @@ font-weight: 400;
     height:30;
     loading:lazy;
 }
-text, p, h1,h2,h3,h4,{
-    text: #fff;
+ p,h1,h2,h3,h4,{
+    color: #fff;
+}
+    header{
+    align-content: left;
+    background-color: rgb(88, 105, 105)
+    position: fixed;
 }
 
 
@@ -193,9 +198,9 @@ h1,h2,h3,h4{{margin: o;
 
 
 /*------------------------------------------------------image*/
-img{
-   width: 20%;
-    height: 20%;
+image{
+   width: 100%;
+    height: 100%;
   
 }
 .media:hover{
@@ -254,18 +259,6 @@ body{
 .video-wrap
 
 
-
-.video-background
-
-
-
-    
-    
-    
-    
-    align-content: left;
-    background-color: rgb(88, 105, 105)
-}
 .list-inline-item:not(:last-child){
     margin: 0;
 }
